rust/crates/ccusage-core/src/snapshots/csusage_core__output__tests__snapshots_group_project_output_orders_named_projects_and_unknown_bucket.snap
---
source: crates/ccusage-core/src/output.rs
expression: "group_project_output(&[named, unknown, other])"
---
{
  "unknown": [
    {
      "cacheCreationTokens": 89,
      "cacheReadTokens": 10,
      "date": "2026-01-03",
      "inputTokens": 1234,
      "modelBreakdowns": [
        {
          "cacheCreationTokens": 50,
          "cacheReadTokens": 10,
          "cost": 0.3,
          "inputTokens": 900,
          "modelName": "gpt-5.2-codex",
          "outputTokens": 300
        },
        {
          "cacheCreationTokens": 39,
          "cacheReadTokens": 0,
          "cost": 0.12,
          "inputTokens": 334,
          "modelName": "claude-sonnet-4-20250514",
          "outputTokens": 267
        }
      ],
      "modelsUsed": [
        "gpt-5.2-codex",
        "claude-sonnet-4-20250514"
      ],
      "outputTokens": 567,
      "totalCost": 0.42,
      "totalTokens": 1900
    }
  ],
  "workspace/api": [
    {
      "cacheCreationTokens": 89,
      "cacheReadTokens": 10,
      "credits": 1.25,
      "date": "2026-01-02",
      "inputTokens": 1234,
      "modelBreakdowns": [
        {
          "cacheCreationTokens": 50,
          "cacheReadTokens": 10,
          "cost": 0.3,
          "inputTokens": 900,
          "modelName": "gpt-5.2-codex",
          "outputTokens": 300
        },
        {
          "cacheCreationTokens": 39,
          "cacheReadTokens": 0,
          "cost": 0.12,
          "inputTokens": 334,
          "modelName": "claude-sonnet-4-20250514",
          "outputTokens": 267
        }
      ],
      "modelsUsed": [
        "gpt-5.2-codex",
        "claude-sonnet-4-20250514"
      ],
      "outputTokens": 567,
      "project": "workspace/api",
      "totalCost": 0.42,
      "totalTokens": 1900
    }
  ],
  "workspace/web": [
    {
      "cacheCreationTokens": 89,
      "cacheReadTokens": 10,
      "date": "2026-01-04",
      "inputTokens": 1234,
      "modelBreakdowns": [
        {
          "cacheCreationTokens": 50,
          "cacheReadTokens": 10,
          "cost": 0.3,
          "inputTokens": 900,
          "modelName": "gpt-5.2-codex",
          "outputTokens": 300
        },
        {
          "cacheCreationTokens": 39,
          "cacheReadTokens": 0,
          "cost": 0.12,
          "inputTokens": 334,
          "modelName": "claude-sonnet-4-20250514",
          "outputTokens": 267
        }
      ],
      "modelsUsed": [
        "gpt-5.2-codex",
        "claude-sonnet-4-20250514"
      ],
      "outputTokens": 567,
      "project": "workspace/web",
      "totalCost": 0.42,
      "totalTokens": 1900
    }
  ]
}
