rust/crates/ccusage-core/src/snapshots/csusage_core__output__tests__snapshots_session_summary_json_with_present_and_missing_options.snap
---
source: crates/ccusage-core/src/output.rs
expression: session_summary_json(&row)
---
{
  "cacheCreationTokens": 89,
  "cacheReadTokens": 10,
  "firstActivity": "2026-01-01T10:30:00.000Z",
  "inputTokens": 1234,
  "lastActivity": "2026-01-02T12:34:56.000Z",
  "modelBreakdowns": [
    {
      "cacheCreationTokens": 50,
      "cacheReadTokens": 10,
      "cost": 0.3,
      "inputTokens": 900,
      "modelName": "gpt-5.2-codex",
      "outputTokens": 300
    },
    {
      "cacheCreationTokens": 39,
      "cacheReadTokens": 0,
      "cost": 0.12,
      "inputTokens": 334,
      "modelName": "claude-sonnet-4-20250514",
      "outputTokens": 267
    }
  ],
  "modelsUsed": [
    "gpt-5.2-codex",
    "claude-sonnet-4-20250514"
  ],
  "outputTokens": 567,
  "projectPath": "/Users/example/workspace/api",
  "sessionId": "session-a",
  "totalCost": 0.42,
  "totalTokens": 1900
}
